fix(core,a11y): skiplinks contrast

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -42,6 +42,10 @@ $link-decoration: underline;
 // Focus
 $focus-outline-color: $orange;
 
+//skiplinks
+$skiplinks-color:$primary-a12;
+$skiplinks-bg:$analogue-2-b1;
+
 // Navbar
 $navbar-brand-font-size: 1rem !default;
 $navbar-toggler-border-radius: 0 !default;
